--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">MobileSystemsProject</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
+    <string-array name="navigation_array">
+        <item>Map</item>
+        <item>Leaderboard</item>
+    </string-array>
 </resources>
